# npcx490m-examples

./: Cargo.toml  README.md  memory.x  npcx490m-chip.yaml
.cargo/: config.toml
