[package]
name = "npcx490m-examples"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core", "inline-asm"] }
cortex-m-rt = "0.7.3"
defmt = "0.3.8"
defmt-rtt = "0.4.1"
# npcx490m-pac = { path = "../npcx490m-pac", features = ["rt", "critical-section"] }
npcx490m-pac = { git = "https://github.com/pop-project/npcx490m-pac", features = ["rt", "critical-section"] }
# embassy-npcx = { git = "https://github.com/pop-project/embassy-npcx", features = ["rt"] }
embassy-npcx = { path = "../embassy-npcx", features = ["rt"] }
embassy-executor = { git = "https://github.com/embassy-rs/embassy", features = ["task-arena-size-32768", "arch-cortex-m", "executor-thread", "defmt"] }
embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy", default-features = false }
embassy-sync = { git = "https://github.com/embassy-rs/embassy", default-features = false }
panic-probe = { version = "0.3.2", features = ["print-defmt"] }

embedded-hal = "1.0"
embedded-hal-async = "1.0"

[profile.release]
debug = 2
